--- a/futuroPampa.html
+++ b/futuroPampa.html
@@ -105,7 +105,8 @@
 
     <div class="w3-third rightPanel">
       <div id="intro_text" style="text-align:center;">
-        <h4><i style="color:grey;">¿Donde reforestar?</i><h4><h5>Evaluación de escenarios</h5>
+        <h4><i style="color:grey;">¿Donde reforestar?</i><h4>
+          <h5>Evaluación de escenarios (Resultados preliminares)</h5>
       </div>
 
       <!--Tabs-->
