--- a/html/navbar.html
+++ b/html/navbar.html
@@ -4,6 +4,10 @@
 
 <div class="white bg-black">
 
+    <!-- Home!
+    <a href="index.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <i class='fas fa-home'></i></a>-->
+
     <div class="dropdown bg-black pa3">
       Diagnóstico hídrico
       <div class="dropdown-content bg-black white pa3">    
