--- a/html/tab_escenarios_narrativa_PEM.html
+++ b/html/tab_escenarios_narrativa_PEM.html
@@ -5,7 +5,7 @@
 <p>Las actividades ecoturísticas se verían en incremento, generando fuentes de empleo a la población siendo esta una alternativa sostenible para generar desarrollo en la región y dejar de lado las actividades extractivas de materia prima que generan ilegalidad y conflictos sociales.</p>
 
 
-<strong>Escenario Realista</strong>
+<strong>Escenario Eco-Turismo</strong>
 <p>Se estima que las actividades mineras sigan en aumento dentro de la región expandiéndose a nuevos lugares y generando conflictos sociales, paralelo a esta actividad se observa el incremento de la actividad agrícola en ambos márgenes de la vía interoceánica.</p>
 <p>Las actividades de recuperación de áreas degradadas se verán dentro de comunidades nativas como es el caso de CCNN Kotsimba.
 Debido a la mala gestión sobre expansión urbana que manejan las autoridades competentes se observa un incremento en las invasiones y conflictos por predios urbanos.</p>
