Added Google Analytics tracking

--- a/amazonia.html
+++ b/amazonia.html
@@ -6,6 +6,12 @@
 
 <html>
 <head>
+
+  
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149667597-3"></script>
+      <script src="js/gtag.js"></script>
+
       <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
