--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -2,6 +2,10 @@
 
 <html lang="es">
   <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149667597-3"></script>
+      <script src="js/gtag.js"></script>
+
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <title>Prototipo de Visualizador PRO Agua</title>
     <meta charset="UTF-8" />
