--- a/futuroResultados.html
+++ b/futuroResultados.html
@@ -5,6 +5,10 @@
 
 <html>
   <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149667597-3"></script>
+      <script src="js/gtag.js"></script>
+
     <title>Prototipo de Visualizador PRO Agua</title>
   	
     <!-- Needed for Navbar-->
