Fixed Pampa 2019 map

--- a/test.html
+++ b/test.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149667597-3"></script>
+      <script src="js/gtag.js"></script>
+
+
   	<!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
