Pampa y SaludPEM ok v0

--- a/futuroResultados.html
+++ b/futuroResultados.html
@@ -40,7 +40,8 @@
     <div style="margin-right: 20vh; margin-left: 40vh;">
       <h2> Esta página está en desarrollo </h2>
 
-      <h4> Descargar resultados: </h4>
+        <br><hr><br>
+      <h4> Descargar resultados preliminares: </h4>
       <div w3-include-html="html/tab_servicios.html"></div>
     </div>
 
