--- a/html/navbar.html
+++ b/html/navbar.html
@@ -26,7 +26,7 @@
     <div class="dropdown bg-black pa3">
       Diagnóstico epidemiológico
       <div class="dropdown-content bg-black white pa3">    
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <a href="saludPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Puerto Maldonado 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
