--- a/html/tab_diagnosticoE.html
+++ b/html/tab_diagnosticoE.html
@@ -3,5 +3,13 @@
  -->
 
 
-<p> Esta página está en desarrollo </p> 
-<p> (Sobre el Diagnóstico epidemiológico...)</p>
+<h5>Diagnóstico epidemiológico</h5>	 
+<p>El dengue es uno de los mas importantes problemas de salud en Madre de Dios, el cual se transmite principalmente por el mosquito <i>Aedes aegypti</i>. Para entender de mejor manera cómo los cambios en el uso del suelo,  clima y  poblaciones humanas afectarian el riesgo de propagacion del dengue en el futuro, hemos desarrollado un modelo de distribución de especies espacialmente explícito para <i>Aedes aegypti</i> y hemos modelado el hábitat adecuado para el mosquito en condiciones de referencia y 6 escenarios futuros que combinan el cambio climático (clima seco vs. lluvioso) y cambio de uso del suelo (escenarios de eco-turismo, sostenible y peor). Estos mapas muestran qué áreas pueden contener hábitat adecuado para Aedes aegytpi y también  la densidad de población de las personas que viven dentro y fuera del hábitat adecuado (por un clima lluvioso). Por lo tanto, cuantas más personas vivan en áreas de hábitat adecuado, mayor será el riesgo potencial de transmisión del dengue, si no se toman otras medidas, como el control de vectores.</p>
+
+<h5>Más recursos</h5>
+<ul>
+          <li><a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a></li>
+          <li><a href="https://github.com/christobal54/mosquito-mapping" target="_blank">    El repositorio de Chris para ejecutar las análisis de mapear mosquitos</a></li>
+          <li><a href="https://github.com/stanford-ccb/ccb" target="_blank">El repositorio para correr modelos de distribución de especies.</a></li>
+          <li><a href="https://photos.google.com/share/AF1QipNm5MOjTHjWZH3J4Gkt6zdy4wLVukfDM0Pd2q1-HkSGj1iy02Yhyg9Zhkkc6gRP1w?key=czBOZXZzWmxIZnJzWTBaT1Z5Zl94OF9hcEZiaEJ3" target="_blank">Fotos</a></li>
+      </ul>
