--- a/html/tab_servicios.html
+++ b/html/tab_servicios.html
@@ -5,13 +5,13 @@
 <h5>Calidad de Agua</h5>
 <p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
 </p><p> Descargar resultados: 
-	Mapas de exportación de sedimentos: <a href="static/pdfs/PANEL_PEM_SDR.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_SDR.pdf" download>TAH</a>, <a href="https://drive.google.com/open?id=1z9K61p_NHR9eS_Eiryw52xgRW4Y-Uy5I" target="_blank"> Resultados crudos de InVEST SDR (rasters)</a>.
+	Mapas de exportación de sedimentos: <a href="static/pdfs/PANEL_PEM_SDR.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_SDR.pdf" download>TAH</a>. <!--<a href="https://drive.google.com/open?id=1z9K61p_NHR9eS_Eiryw52xgRW4Y-Uy5I" target="_blank"> Resultados crudos de InVEST SDR (rasters)</a>-->.
 </p>
 
 <h5>Carbono</h5>
 <p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbón a través del tiempo y la valoración se aplica a la captura.
 </p><p> Descargar resultados: 
-	Mapas de almacenamiento de Carbon: <a href="static/pdfs/PANEL_PEM_CARBONO.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_CARBONO.pdf" download>TAH</a>, <a href="https://drive.google.com/open?id=1MBvT4ypFJ8GJJK4UxDbUdRvIQci-Pf9C" target="_blank"> Resultados crudos de InVEST Carbono (rasters)</a>.
+	Mapas de almacenamiento de Carbon: <a href="static/pdfs/PANEL_PEM_CARBONO.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_CARBONO.pdf" download>TAH</a><!--, <a href="https://drive.google.com/open?id=1MBvT4ypFJ8GJJK4UxDbUdRvIQci-Pf9C" target="_blank"> Resultados crudos de InVEST Carbono (rasters)</a>-->.
 </p>
 
 <h5>Inundaciones</h5>
@@ -20,7 +20,13 @@
 
 <h5>Salud</h5>
 <p>El aumento de hábitats de mosquitos en la Amazonia es una amenaza de crecimiento de enfermedades transmitidas por estos vectores (como el dengue, chikungunya y zika), que impacta tanto a la  salud pública, como en el sector de turismo...
-<a href='salud.html'>Descargar resultados</a>
+<p>Más recursos sobre la analisis:</p>
+<ul>
+          <li><a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a></li>
+          <li><a href="https://github.com/christobal54/mosquito-mapping" target="_blank">    El repositorio de Chris para ejecutar las análisis de mapear mosquitos</a></li>
+          <li><a href="https://github.com/stanford-ccb/ccb" target="_blank">El repositorio para correr modelos de distribución de especies.</a></li>
+          <li><a href="https://photos.google.com/share/AF1QipNm5MOjTHjWZH3J4Gkt6zdy4wLVukfDM0Pd2q1-HkSGj1iy02Yhyg9Zhkkc6gRP1w?key=czBOZXZzWmxIZnJzWTBaT1Z5Zl94OF9hcEZiaEJ3" target="_blank">Fotos</a></li>
+      </ul>
 </p>
 
 <h5>Turismo</h5>
