--- a/saludPEM.html
+++ b/saludPEM.html
@@ -83,7 +83,7 @@
       <div id="mapTitle" class="mapControls">
         <center>
           <h2 id="titulo">Loading...</h2>
-          <a id="changeButton" onclick="switchMode('Hidrico')" style="font-style: italic;"></a>
+          <a id="changeButton" onclick="switchMode('Dengue')" style="font-style: italic;"></a>
         </center>
       </div>
       <div id="map1_text">
@@ -155,7 +155,7 @@
       </div>
 
       <br>
-      <center><h6 style='margin-top: 0px;'>Impacto en las ciudades</h6></center>
+      <center><h6 style='margin-top: 0px;'>Cambio en el riesgo epidemiológico</h6></center>
       <div id="chartPEM_Salud" class="chart"></div>
     </div>
   </body>
