Navbar updated w/ flood part + documented

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -14,6 +14,7 @@
       <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Puerto Maldonado 
       </a>
+      <!-- Below: Will be hidricoTAH.html --> 
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Tahuamanu-Cobija 
       </a>
@@ -29,7 +30,8 @@
       <a href="saludPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Puerto Maldonado 
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <!-- Below: Will be saludTAH.html --> 
+      <a href="futuroResultados.html"  class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"> 
         Region de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
@@ -41,11 +43,19 @@
     <div class="dropdown bg-black pa3">
       Diagnóstico de inundaciones
       <div class="dropdown-content bg-black white pa3">    
+      <a href="inundacion_historia.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+        Inundaciones históricas
+      </a>
+      <!-- Below: Will be floodPEM.html --> 
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        [Trabajo en Progresso]
+        Madre de Dios cuenca
+      </a>
+      <!-- Below: Will be floodTAH.html --> 
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+        Acre-Purus cuenca
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Método
+        Descargar Resultados 
       </a>
       </div>
     </div>
