--- a/html/navbar.html
+++ b/html/navbar.html
@@ -2,11 +2,12 @@
   <div w3-include-html="html/navbar.html"></div>
 -->
 
-<div class="white bg-black">
 
-    <!-- Home!
-    <a href="index.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-      <i class='fas fa-home'></i></a>-->
+<div class="white bg-black" style="cursor: pointer;">
+
+    
+    <a href="index.html" class="link white hover-bg-dark-gray bg-black pa3 pb2 navbarLink">
+      <i class='fa fa-home'></i></a>
 
     <div class="dropdown bg-black pa3">
       Diagnóstico hídrico
@@ -47,7 +48,7 @@
         Inundaciones históricas
       </a>
       <!-- Below: Will be floodPEM.html --> 
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <a href="floodPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Madre de Dios cuenca
       </a>
       <!-- Below: Will be floodTAH.html --> 
