new data and AOI rectangle

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -6,7 +6,7 @@
 <div class="white bg-black" style="cursor: pointer;">
 
     
-    <a href="index.html" class="link white hover-bg-dark-gray bg-black pa3 pb2 navbarLink">
+    <a href="index.html" class="link white  bg-black pa3 pb2 navbarLink">
       <i class='fa fa-home'></i></a>
 
     <div class="dropdown bg-black pa3">
