--- a/floodPEM.html
+++ b/floodPEM.html
@@ -144,7 +144,7 @@
 
         <!-- Tab contents -->
         <div id="DiagH" class="tabcontent">
-          <div w3-include-html="html/tab_diagnosticoH.html"></div>
+          <div w3-include-html="html/tab_diagnosticoF.html"></div>
         </div>
         
         <div id="Escenarios" class="tabcontent">
