--- a/MAP.html
+++ b/MAP.html
@@ -121,12 +121,12 @@
 					 <p><label class="switch"><input type="checkbox" id='????'><span class="slider"></span></label>Temperatura</p>
 				</fieldset>
 	
-				<fieldset><legend><b>Carbon</b></legend>
+				<fieldset><legend><b>Carbono</b></legend>
 					 <p><label class="switch"><input type="checkbox" id='Carbon_MAP'><span class="slider"></span></label>Almacenamiento de Carbon (Total - modelado con InVEST)</p>
 					 <p><label class="switch"><input type="checkbox" id='Carbon_MAP_Arriba????'><span class="slider"></span></label>Almacenamiento de Carbon (Arriba - modelado con InVEST)</p>
 				</fieldset>
 
-				<fieldset><legend><b>Datos global de Carbon</b></legend>
+				<fieldset><legend><b>Datos global de Carbono</b></legend>
 			  		<p><label class="switch small"><input type="checkbox" id='Carbon_GFW????'><span class="slider"></span></label> GFW?</p>
 				</fieldset>
 
