--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -99,7 +99,7 @@
           <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'Escenarios')">
             Escenarios
           </button>
-          <button class="tablinks" onclick="openTab(event, 'Servicios')">Servicios Ecosistemicos
+          <button class="tablinks" onclick="openTab(event, 'Servicios')">Servicios Ecosistémicos
           </button>
           <button class="tablinks" onclick="openTab(event, 'Modelos')">
             Modelos
