--- a/html/tab_escenarios_Pampa.html
+++ b/html/tab_escenarios_Pampa.html
@@ -4,7 +4,7 @@
 
 
 <strong> Escenario 1/ Reforestar zonas priorizadas ecológicamente</strong>
-<p>Este escenario fue construido sobre el supuesto de que el gobierno peruano tiene fondos muy limitados y debe optimizar los recursos  para implementar planes de reforestación en las áreas impactadas por la minería aurífera en La Pampa, por tanto a través de la consulta a expertos en restauración y reforestación se elaboró un modelo para identificar zonas de reforestación priorizadas ecológicamente, tomando en consideración criterios como; en la distancia al bosque, la extensión de las zonas impactadas por minería, el tiempo de abandono y el tipo de minería realizado, en estas zonas priorizadas se desarrollaran planes de reforestación que ayudarán al proceso de recuperación natural del bosque.
+<p>Este escenario fue construido sobre el supuesto de que el gobierno peruano tiene fondos muy limitados y debe optimizar los recursos  para implementar planes de reforestación en las áreas impactadas por la minería aurífera en La Pampa, por tanto a través de la consulta a expertos en restauración y reforestación se elaboró un modelo para identificar zonas de reforestación priorizadas ecológicamente, tomando en consideración criterios como; a distancia al bosque, la extensión de las zonas impactadas por minería, el tiempo de abandono y el tipo de minería realizado, en estas zonas priorizadas se desarrollaran planes de reforestación que ayudarán al proceso de recuperación natural del bosque.
 </p>
 
 <strong>Escenario 2/ áreas de reforestación cercanos a vías de acceso</strong>
