--- a/html/tab_method.html
+++ b/html/tab_method.html
@@ -12,7 +12,7 @@
 		<small><ul>
 			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/sdr.html' target='_blank'>InVEST Sedimentos</a></li>
 			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/seasonal_water_yield.html' target='_blank'>InVEST Rendimiento de Agua</a></li>
-			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/carbonstorage.html' target='_blank'>InVEST Carbón</a></li>
+			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/carbonstorage.html' target='_blank'>InVEST Carbono</a></li>
 			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/recreation.html' target='_blank'>InVEST Turismo</a></li>
 		</ul></small>
 	</div>
@@ -27,6 +27,6 @@
 <p><a href='https://docs.google.com/document/d/1zCunHsRvfcg6uurF3PoLlSgqjG4zP4Vta3AEVqWW8FI/edit?usp=sharing' target='_blank'>Metodologías de procesamiento de datos y los hypotesis (equipo SIG Pro Agua)</a></p>
 </div>
 
-<h4> Servicios ecosistemicos </h4>
+<h4> Servicios Ecosistémicos </h4>
 <div w3-include-html="html/tab_servicios.html"></div>
 
