--- a/html/tab_servicios_Pampa.html
+++ b/html/tab_servicios_Pampa.html
@@ -9,9 +9,9 @@
 </p>
 
 <h5>Carbono</h5>
-<p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbón a través del tiempo y la valoración se aplica a la captura.
+<p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbono a través del tiempo y la valoración se aplica a la captura.
 </p><p> Descargar resultados: 
-	<a href="static/pdfs/Pampa/CARBONO_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de almacenamiento de Carbon</a>.
+	<a href="static/pdfs/Pampa/CARBONO_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de almacenamiento de Carbono</a>.
 </p>
 
 <h5>Flujo de agua</h5>
