--- a/old/index.html
+++ b/old/index.html
@@ -65,16 +65,16 @@
 
 		<div id="Carbono" class="tabcontent">
 	
-				<fieldset><legend><b>InVEST Carbon results</b></legend>
+				<fieldset><legend><b>InVEST Carbono results</b></legend>
 					 <p><label class="switch"><input type="checkbox" id='InVESTcarbonforest'><span class="slider"></span></label>Forest Edge Effect Model</p>
 					 <p><label class="switch"><input type="checkbox" id='InVESTcarbon'><span class="slider"></span></label>Storage Model</p>
 				</fieldset>
 
 				<fieldset><legend><b>Validation datasets</b></legend>
-			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Peru Carbon Map (Asner 200x)</p>
-			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Brazil Carbon Map (ref)</p>
-			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Bolivia Carbon Map (ref)</p>
-			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Full Carbon Map (ref)</p>
+			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Peru Carbono Map (Asner 200x)</p>
+			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Brazil Carbono Map (ref)</p>
+			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Bolivia Carbono Map (ref)</p>
+			  		<p><label class="switch small"><input type="checkbox"><span class="slider"></span></label> Full Carbono Map (ref)</p>
 				</fieldset>
 
 		</div>
