--- a/pampa.html
+++ b/pampa.html
@@ -55,14 +55,14 @@
           <a href="https://elcomercio.pe/peru/madre-de-dios/pampa-origen-enclave-mineria-ilegal-noticia-609033" target="_blank">Leer más en El Comercio. </a>
           </p>
 
-          <h4> Estado de Emergencía</h4>
+          <h4> Estado de Emergencia</h4>
           <p>El 19 de febrero de 2019 declaran a cuatro distritos de Madre de Dios en estado de emergencia por 60 días.
             <a href="https://elcomercio.pe/peru/madre-de-dios/madre-dios-declaran-cuatro-distritos-emergencia-60-dias-noticia-609115" target="_blank">Leer más en El Comercio. </a>
             <a href="https://busquedas.elperuano.pe/normaslegales/declaran-el-estado-de-emergencia-en-once-distritos-de-las-pr-decreto-supremo-n-034-2016-pcm-1383308-1/" target="_blank">Ver el Decreto supremo en El Peruano. </a>
           </p>
 
-          <h4> Propuesta de analisis de reforestación optimal</h4>
-          <p>El estado de emergencia además de cumplir con los objetivos nacionales,  nos ofrece la oportunidad de recuperar el bosque y los servicios ecosistémicos que se han perdido. Dónde y cómo reforestar realmente es importante, y puede cambiar enormemente los efectos de este esfuerzo de reforestación, en términos de éxito ambiental y beneficios tangibles para las comunidades cercanas, como por ejemplo en la calidad del agua. Con las herramientas de NatCap, podemos investigar y comparar diferentes estrategias de reforestación, en busca de la opción que nos brinde el mejor valor relacionado con costo-beneficio.
+          <h4> Propuesta de análisis de reforestación optimal</h4>
+          <p>El estado de emergencia además de cumplir con los objetivos nacionales,  nos ofreció la oportunidad de recuperar el bosque y los servicios ecosistémicos que se han perdido. Dónde y cómo reforestar realmente es importante, y puede cambiar enormemente los efectos de este esfuerzo de reforestación, en términos de éxito ambiental y beneficios tangibles para las comunidades cercanas, como por ejemplo en la calidad del agua. Con las herramientas de NatCap, podemos investigar y comparar diferentes estrategias de reforestación, en busca de la opción que nos brinde el mejor valor relacionado con costo-beneficio.
           </p>
           <!--<img src="static/logos/natcap.png" style="height: 10vh;" alt="Logo NatCap"><img src="static/logos/cincia.png" style="height: 10vh; padding:20px" alt="Logo Cincia">
           <br>-->
