--- a/template.html
+++ b/template.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/overlay.css" />
     <script src="lib/js/includehtml.js"></script>
     <!-- About Overlay -->
