--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!--Needed for Chart D3.js/C3.js-->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
