--- a/html/pickYear.html
+++ b/html/pickYear.html
@@ -7,9 +7,9 @@
                 <input
                   type="radio"
                   class="radio_btn"
-                  name="yrs"
+                  name="yr"
                   value="10"
-                  onchange="updateMap2(mode,'Sost')"
+                  onchange="changeYr()"
                   autocomplete="off"
                 />
                 <label for="b_radio-1">10 años</label>
@@ -19,9 +19,9 @@
                   checked
                   type="radio"
                   class="radio_btn"
-                  name="yrs"
+                  name="yr"
                   value="50"
-                  onchange="updateMap2(mode,'Real')"
+                  onchange="changeYr()"
                   autocomplete="off"
                 />
                 <label for="b_radio-2">50 años</label>
@@ -30,9 +30,9 @@
                 <input
                   type="radio"
                   class="radio_btn"
-                  name="yrs"
+                  name="yr"
                   value="100"
-                  onchange="updateMap2(mode,'Peor')"
+                  onchange="changeYr()"
                   autocomplete="off"
                 />
                 <label for="b_radio-3">100 años</label>
