--- a/html/pickEscenario.html
+++ b/html/pickEscenario.html
@@ -2,7 +2,7 @@
   <div w3-include-html="html/pickEscenario.html"></div>
 -->
 
-<div id="radio_container">
+<div id="radio_container" style="font-size: 1.5vh; padding-left: 1vw;">
           <tr id="scenario">
             <td>
               <!--<p class="row-label">Eligir Escenario</p>-->
