--- a/floodTAH.html
+++ b/floodTAH.html
@@ -84,7 +84,7 @@
       </div>
       <div class="mapControls">
           Escenarios Futoro
-        <div w3-include-html="html/pickEscenario_new.html"></div>
+        <div w3-include-html="html/pickEscenario_TAH_new.html"></div>
       </div>
 
       <div style="clear: both;">
@@ -156,7 +156,7 @@
 
      <br>
       <center><h6 id="chart_header" style='margin-top: 0px;'> Área expuesta a inundaciones de 50 años</h6></center>
-      <div id="chartPEM_flood" class="chart" ></div>
+      <div id="chartTAH_flood" class="chart" ></div>
       
     </div>
 
@@ -171,7 +171,7 @@
     document.getElementById("defaultOpen").click();
   </script>
   <script src="js/overlay.js"></script>
-  <script src="js/chartPEM_flood.js"></script>
+  <script src="js/chartTAH_flood.js"></script>
 
 
   <script src="lib/js/L.Map.Sync.js"></script>
@@ -180,12 +180,7 @@
   <script src='js/mapUtils.js'> </script>
 
   <!-- w/o Pointer -->
-  <script src="js/mapsPEM_flood.js"></script>
-
-<!-- w/ pointer 
-  <script src="js/pointer/helperPointer.js"></script>
-  <script src="js/mapsPEM_pointer.js"></script>
-  <script src="js/pointer/index.js"></script>-->
+  <script src="js/mapsTAH_flood.js"></script>
 
 
   <!-- switchMode -->
