--- a/futuroPampa.html
+++ b/futuroPampa.html
@@ -122,11 +122,8 @@
           <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'Escenarios')">
             Escenarios
           </button>
-          <button class="tablinks" onclick="openTab(event, 'Servicios')">Servicios Ecosistémicos
-          </button>
-          <button class="tablinks" onclick="openTab(event, 'Modelos')">
-            Modelos
-          </button>    
+          <button class="tablinks" onclick="openTab(event, 'Servicios')">Descargar Resultados
+          </button>   
         </div>
 
         <!-- Tab content -->
