--- a/html/tab_servicios_Pampa.html
+++ b/html/tab_servicios_Pampa.html
@@ -15,7 +15,7 @@
 </p>
 
 <h5>Flujo de agua</h5>
-<p>[Sobre el modelo SWY]</p>
+<p>El modelo Seasonal Water Yield (SWY) de InVEST estima el efecto de la gestión del paisaje en el servicio de suministro de agua, para usos como el riego, el consumo doméstico y la producción de energía hidroeléctrica. Esto requiere la comprensión de los procesos hidrológicos en una cuenca, en particular la división entre el escorrentía superficial (quickflow , que ocurre durante o poco después de los eventos de lluvia) y el flujo base (baseflow, que ocurre durante la estación seca). El modelo SWY busca proporcionar orientación sobre la contribución de las parcelas de tierra a la generación de flujo base y escorrentía superficial . Calcula índices espaciales que cuantifican la contribución relativa de una parcela de tierra a la generación de flujo base y el escorrentía superficial .</p>
 <p> Descargar resultados: 
 	<a href="static/pdfs/Pampa/ESCORRENTIA_05 y 20 AÑOS_PAMPA.pdf" download>Mapas del Escorrienta superficial</a>, <a href="static/pdfs/Pampa/RECARGA_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de Recarga local</a>.
 </p>
