--- a/html/pickEscenario_TAH_new.html
+++ b/html/pickEscenario_TAH_new.html
@@ -1,6 +1,6 @@
 
 
-<div id="radio_container" style="font-size: 1.5vh;">
+<div id="radio_container" style="font-size: 1.5vh; position: absolute; bottom: 0; left: 0;">
     <div class="switch-field">
         <input type="radio" id="btnSost" name="escenarios" value="Sost" onchange="updateMap2(mode,'Sost')" checked >
         <label for="btnSost">Sostenible</label>
