flood pages, styling and new text

--- a/floodPEM.html
+++ b/floodPEM.html
@@ -135,7 +135,7 @@
 
         <!-- Tab contents -->
         <div id="DiagH" class="tabcontent">
-          <div w3-include-html="html/tab_diagnosticoF.html"></div>
+          <div w3-include-html="html/tab_diagnosticoFlood.html"></div>
         </div>
         
         <div id="Escenarios" class="tabcontent">
@@ -143,7 +143,7 @@
         </div>
 
         <div id="Método" class="tabcontent">
-          <div w3-include-html="html/tab_method.html"></div>
+          <div w3-include-html="html/tab_method_Flood.html"></div>
         </div>
       </div>
 
