--- a/floodTAH.html
+++ b/floodTAH.html
@@ -136,15 +136,15 @@
 
         <!-- Tab contents -->
         <div id="DiagH" class="tabcontent">
-          <div w3-include-html="html/tab_diagnosticoF.html"></div>
+          <div w3-include-html="html/tab_diagnosticoFlood.html"></div>
         </div>
         
         <div id="Escenarios" class="tabcontent">
-          <div w3-include-html="html/tab_escenarios.html"></div>
+          <div w3-include-html="html/tab_escenarios_narrativa_TAH.html"></div>
         </div>
 
         <div id="Método" class="tabcontent">
-          <div w3-include-html="html/tab_method.html"></div>
+          <div w3-include-html="html/tab_method_Flood.html"></div>
         </div>
       </div>
 
